--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Meal Plan Generator</title>
+  <title>Meal Plan Generator - Mealistan Express</title>
 </head>
 <body>
-  <h1>Meal Plan Generator</h1>
+  <h1>Meal Plan Generator - Mealistan Express</h1>
   
   <form>
     <label for="mealCount">Number of Meals:</label>
