--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
   <title>Meal Plan Generator - Mealistan Express</title>
-  <style>
-    /* Add CSS styles for the table and other elements as needed */
-  </style>
+  <script src="meal-plan-generator.js"></script>
 </head>
 <body>
   <h1>Meal Plan Generator - Mealistan Express</h1>
   
-  <form id="mealPlanForm">
+  <form>
     <label for="mealCount">Number of Meals:</label>
     <select id="mealCount">
       <option value="2">Two Meals</option>
@@ -35,13 +33,46 @@
     <label for="calories">Calories:</label>
     <input type="number" id="calories" name="calories" required>
     
-    <button type="submit" id="generateButton">Generate Meal Plan</button>
+    <button type="submit" onclick="generateMealPlan()">Generate Meal Plan</button>
   </form>
-  
-  <div id="mealPlanTable">
-    <!-- The generated meal plan table will be displayed here -->
-  </div>
-  
-  <script src="mealPlanGenerator.js"></script>
+
+  <table id="mealPlanTable">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Monday</th>
+        <th>Tuesday</th>
+        <th>Wednesday</th>
+        <th>Thursday</th>
+        <th>Friday</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Breakfast</td>
+        <td id="mondayBreakfast"></td>
+        <td id="tuesdayBreakfast"></td>
+        <td id="wednesdayBreakfast"></td>
+        <td id="thursdayBreakfast"></td>
+        <td id="fridayBreakfast"></td>
+      </tr>
+      <tr>
+        <td>Lunch</td>
+        <td id="mondayLunch"></td>
+        <td id="tuesdayLunch"></td>
+        <td id="wednesdayLunch"></td>
+        <td id="thursdayLunch"></td>
+        <td id="fridayLunch"></td>
+      </tr>
+      <tr>
+        <td>Dinner</td>
+        <td id="mondayDinner"></td>
+        <td id="tuesdayDinner"></td>
+        <td id="wednesdayDinner"></td>
+        <td id="thursdayDinner"></td>
+        <td id="fridayDinner"></td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
